// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar-items given extension renders 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="cluster-sidebar"
  >
    <div>
      <div
        class=""
        style="width: 40px; height: 40px;"
      >
        ??
      </div>
      <div />
    </div>
    <div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="cluster-overview"
        data-testid="sidebar-item-for-cluster-overview"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-cluster-overview"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Cluster
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="config"
        data-testid="sidebar-item-for-config"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-config"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="list"
            >
              list
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Config
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="custom-resources"
        data-testid="sidebar-item-for-custom-resources"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-custom-resources"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="extension"
            >
              extension
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Custom Resources
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="events"
        data-testid="sidebar-item-for-events"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-events"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="access_time"
            >
              access_time
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Events
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="helm"
        data-testid="sidebar-item-for-helm"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-helm"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="apps"
            >
              apps
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Helm
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="namespaces"
        data-testid="sidebar-item-for-namespaces"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-namespaces"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="layers"
            >
              layers
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Namespaces
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="network"
        data-testid="sidebar-item-for-network"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-network"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="device_hub"
            >
              device_hub
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Network
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="nodes"
        data-testid="sidebar-item-for-nodes"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-nodes"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Nodes
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="storage"
        data-testid="sidebar-item-for-storage"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-storage"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="storage"
            >
              storage
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Storage
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="user-management"
        data-testid="sidebar-item-for-user-management"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-user-management"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="security"
            >
              security
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Access Control
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="workloads"
        data-testid="sidebar-item-for-workloads"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-workloads"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Workloads
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="some-extension-id-some-parent-id"
        data-testid="sidebar-item-for-some-extension-id-some-parent-id"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-some-extension-id-some-parent-id"
          href="/"
        >
          <div>
            Some icon
          </div>
          <span
            class="link-text box grow"
          >
            Parent
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar-items given extension when a parent item is opened renders 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="cluster-sidebar"
  >
    <div>
      <div
        class=""
        style="width: 40px; height: 40px;"
      >
        ??
      </div>
      <div />
    </div>
    <div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="cluster-overview"
        data-testid="sidebar-item-for-cluster-overview"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-cluster-overview"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Cluster
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="config"
        data-testid="sidebar-item-for-config"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-config"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="list"
            >
              list
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Config
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="custom-resources"
        data-testid="sidebar-item-for-custom-resources"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-custom-resources"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="extension"
            >
              extension
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Custom Resources
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="events"
        data-testid="sidebar-item-for-events"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-events"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="access_time"
            >
              access_time
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Events
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="helm"
        data-testid="sidebar-item-for-helm"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-helm"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="apps"
            >
              apps
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Helm
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="namespaces"
        data-testid="sidebar-item-for-namespaces"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-namespaces"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="layers"
            >
              layers
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Namespaces
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="network"
        data-testid="sidebar-item-for-network"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-network"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="device_hub"
            >
              device_hub
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Network
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="nodes"
        data-testid="sidebar-item-for-nodes"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-nodes"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Nodes
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="storage"
        data-testid="sidebar-item-for-storage"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-storage"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="storage"
            >
              storage
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Storage
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="user-management"
        data-testid="sidebar-item-for-user-management"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-user-management"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="security"
            >
              security
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Access Control
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="workloads"
        data-testid="sidebar-item-for-workloads"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-workloads"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Workloads
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="some-extension-id-some-parent-id"
        data-testid="sidebar-item-for-some-extension-id-some-parent-id"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-some-extension-id-some-parent-id"
          href="/"
        >
          <div>
            Some icon
          </div>
          <span
            class="link-text box grow"
          >
            Parent
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_up"
            >
              keyboard_arrow_up
            </span>
          </i>
        </a>
        <ul
          class="sub-menu"
        >
          <div
            class="SidebarItem"
            data-is-active="false"
            data-test-id="some-extension-id-some-child-id"
            data-testid="sidebar-item-for-some-extension-id-some-child-id"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-extension-id-some-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Child 1
              </span>
            </a>
          </div>
          <div
            class="SidebarItem"
            data-is-active="false"
            data-test-id="some-extension-id-some-other-child-id"
            data-testid="sidebar-item-for-some-extension-id-some-other-child-id"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-extension-id-some-other-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Child 2
              </span>
            </a>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar-items given extension when a parent item is opened when a child of the parent is selected renders 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="cluster-sidebar"
  >
    <div>
      <div
        class=""
        style="width: 40px; height: 40px;"
      >
        ??
      </div>
      <div />
    </div>
    <div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="cluster-overview"
        data-testid="sidebar-item-for-cluster-overview"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-cluster-overview"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Cluster
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="config"
        data-testid="sidebar-item-for-config"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-config"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="list"
            >
              list
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Config
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="custom-resources"
        data-testid="sidebar-item-for-custom-resources"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-custom-resources"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="extension"
            >
              extension
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Custom Resources
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="events"
        data-testid="sidebar-item-for-events"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-events"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="access_time"
            >
              access_time
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Events
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="helm"
        data-testid="sidebar-item-for-helm"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-helm"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="apps"
            >
              apps
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Helm
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="namespaces"
        data-testid="sidebar-item-for-namespaces"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-namespaces"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="layers"
            >
              layers
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Namespaces
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="network"
        data-testid="sidebar-item-for-network"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-network"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="device_hub"
            >
              device_hub
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Network
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="nodes"
        data-testid="sidebar-item-for-nodes"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-nodes"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Nodes
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="storage"
        data-testid="sidebar-item-for-storage"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-storage"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="storage"
            >
              storage
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Storage
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="user-management"
        data-testid="sidebar-item-for-user-management"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-user-management"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="security"
            >
              security
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Access Control
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="workloads"
        data-testid="sidebar-item-for-workloads"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-workloads"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Workloads
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="true"
        data-test-id="some-extension-id-some-parent-id"
        data-testid="sidebar-item-for-some-extension-id-some-parent-id"
      >
        <a
          aria-current="page"
          class="nav-item flex gaps align-center expandable active"
          data-testid="sidebar-item-link-for-some-extension-id-some-parent-id"
          href="/"
        >
          <div>
            Some icon
          </div>
          <span
            class="link-text box grow"
          >
            Parent
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_up"
            >
              keyboard_arrow_up
            </span>
          </i>
        </a>
        <ul
          class="sub-menu active"
        >
          <div
            class="SidebarItem"
            data-is-active="true"
            data-test-id="some-extension-id-some-child-id"
            data-testid="sidebar-item-for-some-extension-id-some-child-id"
          >
            <a
              aria-current="page"
              class="nav-item flex gaps align-center active"
              data-testid="sidebar-item-link-for-some-extension-id-some-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Child 1
              </span>
            </a>
          </div>
          <div
            class="SidebarItem"
            data-is-active="false"
            data-test-id="some-extension-id-some-other-child-id"
            data-testid="sidebar-item-for-some-extension-id-some-other-child-id"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-extension-id-some-other-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Child 2
              </span>
            </a>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="TabLayout"
    data-testid="tab-layout"
  >
    <div
      class="Tabs center scrollable"
    >
      <div
        class="Tab flex gaps align-center active"
        data-testid="tab-link-for-some-extension-id-some-child-id"
        tabindex="0"
      >
        <div
          class="label"
        >
          Child 1
        </div>
      </div>
      <div
        class="Tab flex gaps align-center"
        data-testid="tab-link-for-some-extension-id-some-other-child-id"
        tabindex="0"
      >
        <div
          class="label"
        >
          Child 2
        </div>
      </div>
    </div>
    <main
      class=""
    >
      <div
        data-testid="some-child-page"
      >
        Some child page
      </div>
    </main>
  </div>
</div>
`;

exports[`sidebar-items given extension when a parent item is opened when a child of the parent is selected when selecting sibling tab renders 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="cluster-sidebar"
  >
    <div>
      <div
        class=""
        style="width: 40px; height: 40px;"
      >
        ??
      </div>
      <div />
    </div>
    <div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="cluster-overview"
        data-testid="sidebar-item-for-cluster-overview"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-cluster-overview"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Cluster
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="config"
        data-testid="sidebar-item-for-config"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-config"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="list"
            >
              list
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Config
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="custom-resources"
        data-testid="sidebar-item-for-custom-resources"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-custom-resources"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="extension"
            >
              extension
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Custom Resources
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="events"
        data-testid="sidebar-item-for-events"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-events"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="access_time"
            >
              access_time
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Events
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="helm"
        data-testid="sidebar-item-for-helm"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-helm"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="apps"
            >
              apps
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Helm
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="namespaces"
        data-testid="sidebar-item-for-namespaces"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-namespaces"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="layers"
            >
              layers
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Namespaces
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="network"
        data-testid="sidebar-item-for-network"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-network"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="device_hub"
            >
              device_hub
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Network
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="nodes"
        data-testid="sidebar-item-for-nodes"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-nodes"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Nodes
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="storage"
        data-testid="sidebar-item-for-storage"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-storage"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="storage"
            >
              storage
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Storage
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="user-management"
        data-testid="sidebar-item-for-user-management"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-user-management"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="security"
            >
              security
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Access Control
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="false"
        data-test-id="workloads"
        data-testid="sidebar-item-for-workloads"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-workloads"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Workloads
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active="true"
        data-test-id="some-extension-id-some-parent-id"
        data-testid="sidebar-item-for-some-extension-id-some-parent-id"
      >
        <a
          aria-current="page"
          class="nav-item flex gaps align-center expandable active"
          data-testid="sidebar-item-link-for-some-extension-id-some-parent-id"
          href="/"
        >
          <div>
            Some icon
          </div>
          <span
            class="link-text box grow"
          >
            Parent
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_up"
            >
              keyboard_arrow_up
            </span>
          </i>
        </a>
        <ul
          class="sub-menu active"
        >
          <div
            class="SidebarItem"
            data-is-active="false"
            data-test-id="some-extension-id-some-child-id"
            data-testid="sidebar-item-for-some-extension-id-some-child-id"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-extension-id-some-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Child 1
              </span>
            </a>
          </div>
          <div
            class="SidebarItem"
            data-is-active="true"
            data-test-id="some-extension-id-some-other-child-id"
            data-testid="sidebar-item-for-some-extension-id-some-other-child-id"
          >
            <a
              aria-current="page"
              class="nav-item flex gaps align-center active"
              data-testid="sidebar-item-link-for-some-extension-id-some-other-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Child 2
              </span>
            </a>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="TabLayout"
    data-testid="tab-layout"
  >
    <div
      class="Tabs center scrollable"
    >
      <div
        class="Tab flex gaps align-center"
        data-testid="tab-link-for-some-extension-id-some-child-id"
        tabindex="0"
      >
        <div
          class="label"
        >
          Child 1
        </div>
      </div>
      <div
        class="Tab flex gaps align-center active"
        data-testid="tab-link-for-some-extension-id-some-other-child-id"
        tabindex="0"
      >
        <div
          class="label"
        >
          Child 2
        </div>
      </div>
    </div>
    <main
      class=""
    >
      <div
        data-testid="some-other-child-page"
      >
        Some other child page
      </div>
    </main>
  </div>
</div>
`;
